@@ -48,6 +48,22 @@ module Fantasdic
         'http://bugzilla.gnome.org/enter_bug.cgi?product=fantasdic'
     WEBSITE_URL = 'http://www.gnome.org/projects/fantasdic/'
 
+    GPL = <<EOL
+Fantasdic is free software; you can redistribute it and/or
+modify it under the terms of the GNU General Public License as
+published by the Free Software Foundation; either version 2 of the
+License, or (at your option) any later version.
+
+Fantasdic is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+General Public License for more details.
+
+You should have received a copy of the GNU General Public License along
+with this program; if not, write to the Free Software Foundation, Inc.,
+51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
+EOL
+
     WIN32 = (/mingw|mswin|win32/ =~ RUBY_PLATFORM)
 
     if WIN32
