@@ -21,22 +21,6 @@ module UI
         include GetText
         GetText.bindtextdomain(Fantasdic::TEXTDOMAIN, nil, nil, "UTF-8")
 
-        GPL = <<EOL
-Fantasdic is free software; you can redistribute it and/or
-modify it under the terms of the GNU General Public License as
-published by the Free Software Foundation; either version 2 of the
-License, or (at your option) any later version.
-
-Fantasdic is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
-General Public License for more details.
-
-You should have received a copy of the GNU General Public License along
-with this program; if not, write to the Free Software Foundation, Inc.,
-51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
-EOL
-
         set_url_hook do |about, url|
             Fantasdic::UI::Browser::open_url(url)
         end
@@ -61,7 +45,7 @@ EOL
 
             self.website = Fantasdic::WEBSITE_URL
             self.logo = Icon::LOGO_48X48
-            self.license = GPL
+            self.license = Fantasdic::GPL
             self.transient_for = parent
             signal_connect('destroy') { hide }
             signal_connect('response') { destroy }
